# ROS_ur3ehand

./: README.md
ur3ehand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3ehand_moveit_config/config/: fake_controllers.yaml  gazebo_controllers.yaml  ros_controllers.yaml  stomp_planning.yaml  ur3e_with_hand.srdf
ur3ehand_moveit_config/launch/: alt_move_group.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  table2.scene  table_planning.scene  tablewpowersupply.scene  trajectory_execution.launch.xml  ur3ehand_moveit_planning_execution.launch
ur3ehand_scripts/: CMakeLists.txt  package.xml
ur3ehand_scripts/src/: handshake.py  secrethandshake.py  test.cpp  test_custom.cpp  test_path.cpp  test_pickplace.cpp  test_pickplace.py  test_pickplace2.cpp  test_pickplace2.py  test_pickplace_ex.py  test_pp.cpp  test_random.cpp
